Closed Bug 1260933 Opened 8 years ago Closed 8 years ago

For invalid easing values, print the invalid value

Categories

(Core :: DOM: Animation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: birtles, Assigned: daisuke)

Details

Attachments

(4 files)

Trying to debug bug 1260878 would be a lot easier if we actually printed the invalid easing.

Daisuke, can you take this?
Oh, I should add, if, as a result of bug 1260878, we decide *not* to throw when we get an invalid easing, then we should still produce a console warning for this.
of course!
Attached image screenshot.png
This is a screenshot with invalid easing value.
Also, I'll implement bug 1244643 too.
Comment on attachment 8736541 [details]
MozReview Request: Bug 1260933 - Part 1: For invalid easing values, print the invalid value. r=birtles

https://reviewboard.mozilla.org/r/43367/#review39975

Thank you!
Attachment #8736541 - Flags: review?(bbirtles) → review+
screenshot for invalid duration
Review commit: https://reviewboard.mozilla.org/r/43381/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/43381/
Attachment #8736541 - Attachment description: MozReview Request: Bug 1260933 - Part 1: For invalid easing values, print the invalid value. r?birtles → MozReview Request: Bug 1260933 - Part 1: For invalid easing values, print the invalid value. r=birtles
Attachment #8736553 - Flags: review?(bbirtles)
Comment on attachment 8736541 [details]
MozReview Request: Bug 1260933 - Part 1: For invalid easing values, print the invalid value. r=birtles

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/43367/diff/1-2/
Attachment #8736553 - Flags: review?(bbirtles) → review+
Comment on attachment 8736553 [details]
MozReview Request: Bug 1260933 - Part 2: For invalid duration values, print the invalid value. r=birtles

https://reviewboard.mozilla.org/r/43381/#review39983
Comment on attachment 8736541 [details]
MozReview Request: Bug 1260933 - Part 1: For invalid easing values, print the invalid value. r=birtles

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/43367/diff/2-3/
Attachment #8736553 - Attachment description: MozReview Request: Bug 1260933 - Part 2: For invalid duration values, print the invalid value. r?birtles → MozReview Request: Bug 1260933 - Part 2: For invalid duration values, print the invalid value. r=birtles
Comment on attachment 8736553 [details]
MozReview Request: Bug 1260933 - Part 2: For invalid duration values, print the invalid value. r=birtles

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/43381/diff/1-2/
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/1ec5f90ead46
https://hg.mozilla.org/mozilla-central/rev/2bcb11fae866
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: