Bug 1260933 - Part 2: For invalid duration values, print the invalid value. r=birtles

MozReview-Commit-ID: 1vg3M3yY19Z